--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Click De-bait | Daily Buin</title>
+  <link rel="stylesheet" href="css/style.css"/>
+  <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
 </body>
