--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
+  <!--LANDING PAGE CODE STARTS HERE-->
+  <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
+  <!--CAROUSEL PART STARTS HERE-->
 </body>
 </html>
