--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
   <title>Click De-bait | Daily Buin</title>
   <link rel="stylesheet" href="css/style.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <script type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
+  <div id="background">
+    <p id="title">
+      CLICK DE-BAIT
+    </p>
+  </div>
+  <p><iframe width="100%" height="300" scrolling="no" frameborder="no"
+    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p>
 </body>
 </html>
