--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <link rel="stylesheet" href="css/style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <script type="text/javascript" src="js/app.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
+  <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
 </head>
 <body>
   <!--LANDING PAGE CODE STARTS HERE-->
   <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
   <!--CAROUSEL PART STARTS HERE-->
-  <div id="background">
-    <p id="title">
-      CLICK DE-BAIT
-    </p>
+  <div class="main-carousel" data-flickity='{ "wraparound": true}'>
+    <div class="carousel-cell"></div>
+    <div class="carousel-cell"></div>
+    <div class="carousel-cell"></div>
   </div>
-  <p><iframe width="100%" height="300" scrolling="no" frameborder="no"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></p>
 </body>
 </html>
