--- a/index.html
+++ b/index.html
@@ -13,9 +13,44 @@
   <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
   <!--CAROUSEL PART STARTS HERE-->
   <div class="main-carousel" data-flickity='{ "wraparound": true}'>
-    <div class="carousel-cell"></div>
-    <div class="carousel-cell"></div>
-    <div class="carousel-cell"></div>
+    <div class="carousel-cell">
+      <div class="carousel-content">
+        <div class="title">
+          Episode 1
+        </div>
+        <div class="embed"><iframe width="90%" height="300" scrolling="no" frameborder="1"
+          src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
+        </iframe></div>
+      </div>
+    </div>
+    <div class="carousel-cell">
+      <div class="carousel-content">
+        <div class="title">
+          Episode 2
+        </div>
+      </div>
+    </div>
+    <div class="carousel-cell">
+      <div class="carousel-content">
+        <div class="title">
+          Episode 3
+        </div>
+      </div>
+    </div>
+    <div class="carousel-cell">
+      <div class="carousel-content">
+        <div class="title">
+          Episode 4
+        </div>
+      </div>
+    </div>
+    <div class="carousel-cell">
+      <div class="carousel-content">
+        <div class="title">
+          Episode 5
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
