--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!--LANDING PAGE CODE STARTS HERE-->
   <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
   <!--CAROUSEL PART STARTS HERE-->
-  <div class="main-carousel" data-flickity='{ "wraparound": true}'>
+  <div class="main-carousel" data-flickity='{ "wrapAround": true, "accessibility": true}'>
     <div class="carousel-cell">
       <div class="carousel-content">
         <div class="title">
