--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <script type="text/javascript" src="js/app.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
+  <script>
+  $(function() {
+   $('a[href*="#"]:not([href="#"])').click(function() {
+     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
+     && location.hostname == this.hostname) {
+       var target = $(this.hash);
+       target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+       if (target.length) {
+         $('html, body').animate({
+           scrollTop: target.offset().top
+         }, 1000);
+         return false;
+       }
+     }
+   });
+ });
+  </script>
 </head>
 <body>
   <!--LANDING PAGE CODE STARTS HERE-->
@@ -17,12 +35,13 @@
     <p id="title">
       CLICK DE-BAIT
     </p>
-    
-    <img class="slide-arrow" src="css/image/white-arrow-down.png">
+
+    <a href="#main-carousel"><img class="slide-arrow" src="css/image/white-arrow-down.png"></a>
 
   </div>
 
-  <div class="main-carousel" data-flickity='{ "wrapAround": true, "accessibility": true}'>
+  <div id="main-carousel" data-flickity='{ "wrapAround": true,
+  "pageDots": false, "accessibility": true}'>
     <div class="carousel-cell">
       <div class="carousel-content">
         <iframe width="90%" height="300" scrolling="no"
@@ -58,6 +77,12 @@
         </iframe>
       </div>
     </div>
+  </div>
+
+  <div id="footerbackground">
+    <p id="footer">
+      Footer
+    </p>
   </div>
 </body>
 </html>
