--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <link rel="stylesheet" href="css/style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <script type="text/javascript" src="js/app.js"></script>
-  
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.sound.min.js"></script>
-    
+
   <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
   <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.sound.min.js"></script>
   <script>
   $(function() {
    $('a[href*="#"]:not([href="#"])').click(function() {
@@ -34,7 +34,7 @@
 </head>
 <body>
   <!--LANDING PAGE CODE STARTS HERE-->
-   <script src="sketch.js"></script>
+   <script language="javascript" type="text/javascript" src="sketch.js"></script>
   <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
   <!--CAROUSEL PART STARTS HERE-->
   <div id="background">
