--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 </head>
 <body>
   <!--LANDING PAGE CODE STARTS HERE-->
-   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <div id="sketch-holder">
+    <!-- Sketch goes here! -->
+  </div>
   <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
   <!--CAROUSEL PART STARTS HERE-->
   <div id="background">
