--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <p id="title">
     CLICK DE-BAIT
   </p>
-  <div id="sketch-holder">
+  <div id="sketch-holder" style="width: 100%; height: 100%;">
     <!-- Sketch goes here! -->
   </div>
   <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
