--- a/index.html
+++ b/index.html
@@ -35,48 +35,48 @@
 </head>
 <body>
   <!--LANDING PAGE CODE STARTS HERE-->
-  <div id="sketch-holder" style="width: 100%; height: 100%;">
-    <p id="title">
-      CLICK DE-BAIT
+  <div id="sketch-holder">
+    <p id='title'>
+      Click De-Bait
     </p>
-    <a href="#main-carousel"><img class="slide-arrow" src="css/image/white-arrow-down.png"></a>
-    <!-- Sketch goes here! -->
+    <a href="#main-carousel">
+      <img class="slide-arrow" src="css/image/white-arrow-down.png">
+    </a>
   </div>
-  <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
-  <!--CAROUSEL PART STARTS HERE-->
+
   <div id="main-carousel" data-flickity='{ "wrapAround": true,
   "pageDots": false, "accessibility": true}'>
     <div class="carousel-cell">
       <div class="carousel-content">
-        <iframe width="90%" height="300" scrolling="no"
+        <iframe width="100%" height="300px" scrolling="no"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
         </iframe>
       </div>
     </div>
     <div class="carousel-cell">
       <div class="carousel-content">
-        <iframe width="90%" height="300" scrolling="no"
+        <iframe width="100%" height="300px" scrolling="no"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
         </iframe>
       </div>
     </div>
     <div class="carousel-cell">
       <div class="carousel-content">
-        <iframe width="90%" height="300" scrolling="no"
+        <iframe width="100%" height="300px" scrolling="no"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
         </iframe>
       </div>
     </div>
     <div class="carousel-cell">
       <div class="carousel-content">
-        <iframe width="90%" height="300" scrolling="no"
+        <iframe width="100%" height="300px" scrolling="no"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
         </iframe>
       </div>
     </div>
     <div class="carousel-cell">
       <div class="carousel-content">
-        <iframe width="90%" height="300" scrolling="no"
+        <iframe width="100%" height="300px" scrolling="no"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
         </iframe>
       </div>
@@ -88,5 +88,7 @@
       Footer
     </p>
   </div>
+  <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
+  <!--CAROUSEL PART STARTS HERE-->
 </body>
 </html>
