changed landing page to be responsive, added credit

--- a/index.html
+++ b/index.html
@@ -83,12 +83,9 @@
     </div>
   </div>
 
-  <div id="footerbackground">
-    <p id="footer">
-      Footer
-    </p>
-  </div>
-  <!--DESCRIPTION/WORD ANIMATION STARTS HERE-->
-  <!--CAROUSEL PART STARTS HERE-->
+  <footer>
+    Page designed and created by <a href="https://github.com/talie-chen" target="_blank">Talie Chen</a>, <a href="https://github.com/Bensun" target="_blank">Benson Han</a>, <a href="https://github.com/paulinalei" target="_blank">Paulina Lei</a>, <a href="https://github.com/silverkitsune">Ashley Vu</a>, and <a href="https://github.com/camillez325">Camille Zhang</a>. &copy; Daily Bruin
+  </footer>
+
 </body>
 </html>
