--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Click De-bait | Daily Buin</title>
-  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -45,11 +45,10 @@
     </a>
   </div>
 
-  <div id="main-carousel" data-flickity='{ "wrapAround": true,
-  "pageDots": false, "accessibility": true}'>
+  <div id="main-carousel" data-flickity='{"pageDots": false, "accessibility": true}'>
     <div class="carousel-cell">
       <div class="carousel-content">
-        <iframe width="70%" height="300px" scrolling="no"
+        <iframe width="60%" height="300px" scrolling="no"
         src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/289802303&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true">
         </iframe>
       </div>
