--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta property="og:type" content="article"/>
+  <meta property="og:title" content="Click De-bait | Daily Bruin"/>
+  <meta property="og:description" content="The official online hub of the UCLA Radio Click De-bait podcast"/>
+  <meta property="og:image" content="http://dailybruin.com/images/2017/02/db.png"/>
+  <meta property="og:image:type" content="image/png"/>
+  <meta name="twitter:card" content="summary_large_image"/>
+
   <title>Click De-bait | Daily Buin</title>
   <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
