--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta property="og:type" content="article"/>
   <meta property="og:title" content="Click De-bait | Daily Bruin"/>
-  <meta property="og:description" content="The official online hub of the UCLA Radio Click De-bait podcast"/>
+  <meta property="og:description" content="The online hub of the UCLA Radio Click De-bait podcast"/>
   <meta property="og:image" content="http://dailybruin.com/images/2017/02/db.png"/>
   <meta property="og:image:type" content="image/png"/>
   <meta name="twitter:card" content="summary_large_image"/>
