added animated icons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.sound.min.js"></script>
   <script src="sketch.js"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
   <script>
   $(function() {
    $('a[href*="#"]:not([href="#"])').click(function() {
@@ -82,6 +85,20 @@
       </div>
     </div>
   </div>
+
+  <div class="icons">
+    <a href="http://tinypic.com?ref=20k3mlt" target="_blank"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></a>
+    <a href="http://tinypic.com?ref=eal3pg" target="_blank"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
+    <a href="http://tinypic.com?ref=35klbmu" target="_blank"><img src="http://i63.tinypic.com/35klbmu.png" border="0" alt="Image and video hosting by TinyPic"></a>
+  </div>
+
+   <h1 class="animated tada"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></h1>
+   <h1 class="animated tada"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></h1>
+
+
+
+
+
 
   <footer>
     Page designed and created by <a href="https://github.com/talie-chen" target="_blank">Talie Chen</a>, <a href="https://github.com/Bensun" target="_blank">Benson Han</a>, <a href="https://github.com/paulinalei" target="_blank">Paulina Lei</a>, <a href="https://github.com/silverkitsune">Ashley Vu</a>, and <a href="https://github.com/camillez325">Camille Zhang</a>. &copy; Daily Bruin
