--- a/index.html
+++ b/index.html
@@ -95,16 +95,10 @@
   </div>
 
   <div class="icons">
-    <a href="http://tinypic.com?ref=20k3mlt" target="_blank"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></a>
-    <a href="http://tinypic.com?ref=eal3pg" target="_blank"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
-    <a href="http://tinypic.com?ref=35klbmu" target="_blank"><img src="http://i63.tinypic.com/35klbmu.png" border="0" alt="Image and video hosting by TinyPic"></a>
+    <h1 class="animated infinite tada"><a href="http://tinypic.com?ref=20k3mlt" target="_blank"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></a></h1>
+    <h1 class="animated infinite tada"><a href="http://tinypic.com?ref=eal3pg" target="_blank"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></a></h1>
+    <h1 class="animated infinite tada"><a href="http://tinypic.com?ref=35klbmu" target="_blank"><img src="http://i63.tinypic.com/35klbmu.png" border="0" alt="Image and video hosting by TinyPic"></a></h1>
   </div>
-
-   <h1 class="animated tada"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></h1>
-   <h1 class="animated tada"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></h1>
-
-
-
 
 
 
