--- a/index.html
+++ b/index.html
@@ -33,13 +33,24 @@
    });
  });
   </script>
+  
+ 
 </head>
 <body>
   <!--LANDING PAGE CODE STARTS HERE-->
   <div id="sketch-holder">
-    <p id='title'>
+    <!--<p id='title'>
       Click De-Bait
     </p>
+    -->
+    <div id="navbar">
+    	 <ul>
+ 		  <li><a href="http://www.dailybruin.com">BACK TO DAILYBRUIN</a></li>
+ 		  <li><a href="#main-carousel"">PODCASTS</a></li></ul>
+ 		  <li style="float:left"><a id="navtitle" href="index.html">CLICK DE-BAIT</a></li>
+ 
+		</ul>
+	</div>
     <a href="#main-carousel">
       <img class="slide-arrow" src="css/image/white-arrow-down.png">
     </a>
