--- a/index.html
+++ b/index.html
@@ -55,14 +55,11 @@
       Click De-Bait
     </p>
     -->
-    <div id="navbar">
-    	 <ul>
+    	 <ul class="navbar-ul">
  		  <li><a href="http://www.dailybruin.com">BACK TO DAILYBRUIN</a></li>
- 		  <li><a href="#main-carousel"">PODCASTS</a></li></ul>
- 		  <li style="float:left"><a id="navtitle" href="index.html">CLICK DE-BAIT</a></li>
- 
+ 		  <li><a href="#main-carousel"">PODCASTS</a></li>
+ 		  <li><a id="navtitle" href="index.html">CLICK DE-BAIT</a></li>
 		</ul>
-	</div>
     <a href="#main-carousel">
       <img class="slide-arrow" src="css/image/white-arrow-down.png">
     </a>
