--- a/index.html
+++ b/index.html
@@ -95,16 +95,15 @@
   </div>
 
   <div class="icons">
-    <h1 class="animated infinite tada"><a href="http://tinypic.com?ref=20k3mlt" target="_blank"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></a></h1>
-    <h1 class="animated infinite tada"><a href="http://tinypic.com?ref=eal3pg" target="_blank"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></a></h1>
-    <h1 class="animated infinite tada"><a href="http://tinypic.com?ref=35klbmu" target="_blank"><img src="http://i63.tinypic.com/35klbmu.png" border="0" alt="Image and video hosting by TinyPic"></a></h1>
+    <p class="animated infinite tada"><a href="http://tinypic.com?ref=20k3mlt" target="_blank"><img src="http://i67.tinypic.com/20k3mlt.png" border="0" alt="Image and video hosting by TinyPic"></a></p>
+    <p class="animated infinite tada"><a href="http://tinypic.com?ref=eal3pg" target="_blank"><img src="http://i66.tinypic.com/eal3pg.jpg" border="0" alt="Image and video hosting by TinyPic"></a></p>
+    <p class="animated infinite tada"><a href="http://tinypic.com?ref=35klbmu" target="_blank"><img src="http://i63.tinypic.com/35klbmu.png" border="0" alt="Image and video hosting by TinyPic"></a></p>
   </div>
 
 
-
-  <footer>
+  <p class="footer">
     Page designed and created by <a href="https://github.com/talie-chen" target="_blank">Talie Chen</a>, <a href="https://github.com/Bensun" target="_blank">Benson Han</a>, <a href="https://github.com/paulinalei" target="_blank">Paulina Lei</a>, <a href="https://github.com/silverkitsune">Ashley Vu</a>, and <a href="https://github.com/camillez325">Camille Zhang</a>. &copy; Daily Bruin
-  </footer>
+  </p>
 
 </body>
 </html>
